--- a/findly-builder/src/app/components/app-experiments/app-experiments.component.html
+++ b/findly-builder/src/app/components/app-experiments/app-experiments.component.html
@@ -52,8 +52,21 @@
                     <img class="custom-dropdown-toggle-icon" src="assets/icons/Vector.svg">
                 </button>
                 <ul class="dropdown-menu content-menu type_sort_dropdown-content" ngbDropdownMenu>
-                  <li *ngFor="let status of dynamicStatus" (click)="filterTable(status,'status');statusFilter.close()"><span
-                      class="list-name">{{status|titlecase}}</span><img [ngClass]="{'hide': status !== setTab}" src="assets/icons/check-blue.svg"></li>
+                  <li [ngClass]="{'selected-list': filterSystem.statusfilter == 'all'}" (click)="filterTable('all','status');statusFilter.close();">All<img
+                    [ngClass]="{'hide': filterSystem.statusfilter !== 'all'}"  src="assets/icons/check-blue.svg"></li>
+                  <li [ngClass]="{'selected-list': filterSystem.statusfilter == status}" *ngFor="let status of dynamicStatus" (click)="filterTable(status,'status');statusFilter.close();">
+                    <span class="list-name">{{status}}</span>
+                    <img [ngClass]="{'hide': filterSystem.statusfilter !== status}"  src="assets/icons/check-blue.svg"></li>
+
+
+
+
+
+
+
+
+                  <!-- <li *ngFor="let status of dynamicStatus" (click)="filterTable(status,'status');statusFilter.close()"><span
+                      class="list-name">{{status|titlecase}}</span><img [ngClass]="{'hide': status !== setTab}" src="assets/icons/check-blue.svg"></li> -->
                 </ul>
               </div>
             </div>
