FAQ home page fix--if source exists in manage extract..it should show home page instead of landing page

--- a/findly-builder/src/app/components/faq-source/faq-source.component.html
+++ b/findly-builder/src/app/components/faq-source/faq-source.component.html
@@ -9,7 +9,7 @@
         <div class="faq-header-sec row m-0">
             <div class="col-6 left-sec p-0 faq-title" >{{'faqSource.faqs' | translate}}</div>
             <div class="col-6 p-0 right-sec d-flex align-items-center justify-content-end">
-                <div class="kr-sg-dropdowns add w-auto"  #selectSourceDrop='ngbDropdown'ngbDropdown [container]="'body'" [placement]="'bottom-right'" *ngIf="(faqs && faqs.length) ||  (faqSelectionObj.stats.draft || faqSelectionObj.stats.in_review || faqSelectionObj.stats.approved) || viewDetails || extractedFaqs">                                        
+                <div class="kr-sg-dropdowns add w-auto"  #selectSourceDrop='ngbDropdown'ngbDropdown [container]="'body'" [placement]="'bottom-right'" *ngIf="(faqs && faqs.length) || (extractedResources && extractedResources.length) || (faqSelectionObj.stats.draft || faqSelectionObj.stats.in_review || faqSelectionObj.stats.approved) || viewDetails || extractedFaqs">                                        
                     <div class="dropdown dropdown-open mr-4 cursor-pointer">
                         <div _ngcontent-rjr-c36="" class="dropdown-toggle" data-identifyelement="1" ngbDropdownToggle><img _ngcontent-rjr-c36="" class="mr-2 mb-1" src="assets/icons/add_plus.svg">Add FAQ</div>
                         <!-- <button class="dropdown-toggle kr-sg-button-primary btn_lg text-left" ngbDropdownToggle>Add FAQ</button>                                             -->
@@ -23,12 +23,12 @@
                
                 <!-- <div (click)="openStatusModal()" class="title" *ngIf="(faqs && faqs.length) ||  (faqSelectionObj.stats.draft || faqSelectionObj.stats.in_review || faqSelectionObj.stats.approved)"><img src="assets/icons/manage-extraction.svg">Manage Extracts</div> -->
                 <div class="clock d-none"><img src="assets/icons/clock.svg"></div>
-                <div class="kr-sg-dropdowns w-auto exportdropdown" ngbDropdown [container]="'body'" [placement]="'bottom-right'" *ngIf="(faqs && faqs.length) ||  (faqSelectionObj.stats.draft || faqSelectionObj.stats.in_review || faqSelectionObj.stats.approved) || viewDetails || extractedFaqs">                                        
+                <div class="kr-sg-dropdowns w-auto exportdropdown" ngbDropdown [container]="'body'" [placement]="'bottom-right'" *ngIf="(faqs && faqs.length) || (extractedResources && extractedResources.length) || (faqSelectionObj.stats.draft || faqSelectionObj.stats.in_review || faqSelectionObj.stats.approved) || viewDetails || extractedFaqs">                                        
                     <div class="dropdown dropdown-open">
                         <button class="dropdown-toggle p-0 border-0 three-dots" ngbDropdownToggle> <img _ngcontent-aif-c18="" class="ng-tns-c18-5" src="assets/icons/elipse.svg"></button>                                            
                         <ul class="dropdown-menu content-menu faq-filter-add" ngbDropdownMenu>
                           <li (click)='exportFaq("json")' *ngIf="(faqs && faqs.length) || viewDetails">{{'faqSource.export_to_json' | translate}}</li>
-                          <li (click)='exportFaq("csv")' *ngIf="(faqs && faqs.length) || viewDetails">{{'faqSource.export_to_csv' | translate}}</li>                         
+                          <li (click)='exportFaq("csv")' *ngIf="(faqs && faqs.length) || (extractedResources && extractedResources.length) || viewDetails">{{'faqSource.export_to_csv' | translate}}</li>                         
                           <li (click)="openStatusModal()" *ngIf="(faqs && faqs.length) ||  (faqSelectionObj.stats.draft || faqSelectionObj.stats.in_review || faqSelectionObj.stats.approved) || viewDetails">{{'faqSource.manage_extracts' | translate}}</li>
                         </ul>
                     </div>
