FLY-3117(ISSUE-1), FLY-1384(Icons)--Fixed

--- a/findly-builder/src/app/components/add-faq/add-faq.component.html
+++ b/findly-builder/src/app/components/add-faq/add-faq.component.html
@@ -19,23 +19,29 @@
         <img src="assets/icons/editor/alphabits.svg">
       </span> -->
       <span (click)="onSelected('bold')" class="edit-action">
-        <img src="assets/icons/editor/bold.svg">
+        <img src="assets/icons/editor/bold.png">
       </span>
       <span (click)="onSelected('italic')" class="edit-action">
         <img src="assets/icons/editor/italic.svg">
       </span>
-      <span  class="edit-action" (click)="onSelected('link')">
+      <span  class="edit-action">
+        <img src="assets/icons/editor/strikeoff.png">
+      </span>
+      <span  class="edit-action" (click)="onSelected('underline')">
+        <img src="assets/icons/editor/underline.png">
+      </span>
+      <!-- <span  class="edit-action" (click)="onSelected('link')">
         <img src="assets/icons/editor/link.svg">
-      </span>
-      <span (click)="onSelected('indentLeft')" class="edit-action">
+      </span> -->
+      <!-- <span (click)="onSelected('indentLeft')" class="edit-action">
         <img src="assets/icons/editor/align-left.svg">
-      </span>
+      </span> -->
       <!-- <span class="edit-action">
         <img src="assets/icons/editor/align-center.svg">
       </span> -->
-      <span (click)="onSelected('indentRight')" class="edit-action">
+      <!-- <span (click)="onSelected('indentRight')" class="edit-action">
         <img src="assets/icons/editor/align-right.svg">
-      </span>
+      </span> -->
       <span class="edit-action" (click)="onSelected('ordered')">
         <img src="assets/images/markup/list-ordered.svg">
       </span>
