--- a/findly-builder/src/app/components/add-faq/add-faq.component.html
+++ b/findly-builder/src/app/components/add-faq/add-faq.component.html
@@ -24,10 +24,10 @@
       <span (click)="onSelected('italic')" class="edit-action">
         <img src="assets/icons/editor/italic.svg">
       </span>
-      <span  class="edit-action">
+      <span  class="edit-action d-none">
         <img src="assets/icons/editor/strikeoff.png">
       </span>
-      <span  class="edit-action" (click)="onSelected('underline')">
+      <span  class="edit-action d-none" (click)="onSelected('underline')">
         <img src="assets/icons/editor/underline.png">
       </span>
       <!-- <span  class="edit-action" (click)="onSelected('link')">
