FLY-3262 issue fixed

--- a/findly-builder/src/app/components/content-source/content-source.component.html
+++ b/findly-builder/src/app/components/content-source/content-source.component.html
@@ -1242,7 +1242,7 @@
           <div class="view-details-data">
             <div class="title">URL</div>
             <div class="desc-info">{{selectedPage._source.page_url|| selectedPage._source.page_image_url }}<img
-                class="external_link" (click)="openImageLink(selectedPage.imageUrl)"
+                class="external_link" (click)="openImageLink(selectedPage.url_display)"
                 src="assets/icons/sidemenu/external-link.svg"></div>
           </div>
           <div class="view-details-data">
