--- a/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
@@ -10982,7 +10982,7 @@ body.demo .finalResults .task-wrp:nth-child(n+3) {
   .searchAssist-kore-chat-window .custom_checkbox.kr-sg-checkbox {
     display: inline-flex;
     padding-right: 32px;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
     position: relative;
   }
   .searchAssist-kore-chat-window .custom_checkbox.kr-sg-checkbox.d-block {
@@ -11007,6 +11007,11 @@ body.demo .finalResults .task-wrp:nth-child(n+3) {
     text-transform: capitalize;
     padding-left: 30px;
     word-break: break-word;
+    padding: 0px 0px 3px 28px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    max-width: 86%;
   }
   .searchAssist-kore-chat-window .custom_checkbox.kr-sg-checkbox .checkbox-custom + .checkbox-custom-label::before {
     content: '';
@@ -14174,7 +14179,7 @@ border: 0;
 
 .searchAssist-kore-chat-window .kr-sg-radiobutton{
     margin: 0;
-    padding: 8px 10px;
+    /* padding: 8px 10px; */
     border-radius: 2px;
 }
 
@@ -14903,10 +14908,68 @@ margin-bottom: 15px !important;
     border-radius: 6px;
     z-index: 1;
     }
-    .searchAssist-kore-chat-window.search-container.conversation.active.no-history .parent-search-live-auto-suggesition {
-        height: calc(100% - 16px);
-}
-.searchAssist-kore-chat-window.search-container.conversation.active.no-history #searchChatContainer {
-    height: auto;
-    padding: 0px;
-}
+    .kr-sg-radiobutton .radio-custom {
+        position: absolute;
+        cursor: pointer;
+        margin: 3px;
+        height: auto;
+    }
+   
+    .kr-sg-radiobutton .radio-custom+.radio-custom-label {
+        display: inline-block;
+        vertical-align: middle;
+        cursor: pointer;
+        position: relative;
+        font-size: 14px;
+        color: #202124;
+        margin: 0;
+        font-weight: 400;
+        margin-bottom: 7px;
+        padding: 3px 0px 3px 28px;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        padding-right: 0;
+        max-width: 86%;
+    }
+    .kr-sg-radiobutton .associated-filter-count{
+        color: var(--sdk-dusty-gray-color);
+        position: absolute;
+        margin-left: 2px;
+        top: 0;
+      }
+      .kr-sg-radiobutton {
+        position: relative;
+    }
+    .searchAssist-kore-chat-window .custom_checkbox.kr-sg-radiobutton .radio-custom.sdk-filter-radio:hover:not([disabled]) + .radio-custom-label:hover {
+        color: var(--sdk-primary-blue-color);
+      }
+      .custom_checkbox.kr-sg-radiobutton .radio-custom + .radio-custom-label::before {
+        content: '';
+        display: inline-block;
+        vertical-align: middle;
+        width: 16px;
+        height: 16px;
+        padding: 0;
+        margin-right: 12px;
+        text-align: center;
+        border-radius: 2px;
+        border: solid 1px var(--sdk-border-silver-sand-color);
+        background-color: var(--sdk-white-bg);
+        margin-top: -3px;
+        border-radius: 100px;
+        left: 0;
+        position: absolute;
+        top: 5px;
+    }
+    .custom_checkbox.kr-sg-radiobutton .radio-custom:checked + .radio-custom-label::before{
+        content: "";
+        color: var(--sdk-white-font-color);
+        font-size: 12px;
+        background-color: var(--sdk-primary-blue-color) !important;
+        border: 1px solid var(--sdk-primary-blue-color);
+        box-shadow: inset 0 0 0 3px var(--sdk-white-border);
+     }
+     .custom_checkbox.kr-sg-radiobutton .radio-custom:hover + .radio-custom-label::before {
+        border:solid 1px var(--sdk-primary-blue-color);
+      }
