--- a/findly-builder/src/app/components/index/index.component.scss
+++ b/findly-builder/src/app/components/index/index.component.scss
@@ -400,6 +400,9 @@
               margin-bottom: 10px;
               color: #9AA0A6;
             }
+            .radio-custom-label{
+              max-width: none;
+            }
           }
           .conditions-input-sec{
             background: #FFFFFF;
