FLY-3117 issue fixed

--- a/findly-builder/src/app/components/index/index.component.html
+++ b/findly-builder/src/app/components/index/index.component.html
@@ -695,11 +695,14 @@
                   translate)}}</button>
                 <ul class="dropdown-menu content-menu">
                   <li (click)="newMappingObj[selectedStage.type].defaultValue.model ='Universal Sentence Encoder'">
-                    <a>{{'workbench.universal_sentence_encoder' | translate}}</a></li>
+                    <a>{{'workbench.universal_sentence_encoder' | translate}}</a>
+                  </li>
                   <li (click)="newMappingObj[selectedStage.type].defaultValue.model ='Sentence Transformers'">
-                    <a>{{'workbench.sentence_transformers' | translate}}</a></li>
+                    <a>{{'workbench.sentence_transformers' | translate}}</a>
+                  </li>
                   <li (click)="newMappingObj[selectedStage.type].defaultValue.model ='InferSent'">
-                    <a>{{'workbench.infersent' | translate}}</a></li>
+                    <a>{{'workbench.infersent' | translate}}</a>
+                  </li>
                 </ul>
               </div>
             </div>
@@ -713,11 +716,14 @@
                 </button>
                 <ul class="dropdown-menu content-menu">
                   <li (click)="newMappingObj[selectedStage.type].defaultValue.model ='topic_rank'">
-                    <a>{{'workbench.topic_rank' | translate}}</a></li>
+                    <a>{{'workbench.topic_rank' | translate}}</a>
+                  </li>
                   <li (click)="newMappingObj[selectedStage.type].defaultValue.model ='position_rank'">
-                    <a>{{'workbench.position_rank' | translate}}</a></li>
+                    <a>{{'workbench.position_rank' | translate}}</a>
+                  </li>
                   <li (click)="newMappingObj[selectedStage.type].defaultValue.model ='multipartite_rank'">
-                    <a>{{'workbench.multipartite_rank' | translate}}</a></li>
+                    <a>{{'workbench.multipartite_rank' | translate}}</a>
+                  </li>
                 </ul>
               </div>
             </div>
